# playground-mesonbuild

./: .gitignore  environment-macos.yml  environment-win.yml  fib1.f  meson.build  pyproject.toml  readme.md
.github/workflows/: build.yml  condatest.yml  wheels.yml
conda/: environment-linux.yml  environment-macos.yml  environment-win.yml
src/f2py_examples/: meson.build
